# AdventOfCode

./: .gitignore  Pipfile  README.md  christmas.txt  day_1.py  day_11.py  day_12.py  day_13.py  day_14.py  day_19.py  day_2.py  day_21.py  day_3.py  day_4.py  day_5.py  day_6.py  day_8.py  day_9.py  day_template.py  helpers.py  init.py  pyproject.toml  squid.psd
2014/: day_04.py
2015/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py
2016/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py
2017/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
2018/: day_01.py  day_02.py  day_03.py
2019/: day_01.py  day_02.py
2020/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
2021/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_22.py
2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py
2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  (+11 more)
(+51 files in other folders)
