[project]
name="advent-of-code"
version="0.0.dev1"
description="My personal Advent of Code utilities"
readme="README.md"
requires-python = ">=3.10"
authors = [
    { name="Jessseee" },
    { name="JonaMata" },
]

[options]
packages = ['aoc', 'aoc.helpers']

[project.scripts]
aoc = "aoc.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
