[project]
name="advent-of-code"
version="0.0.dev1"
description="My personal Advent of Code utilities"
readme="README.md"
requires-python = ">=3.10"
authors = [
    { name="Jessseee" }
]
dependencies = [
    "click>=8.1.7",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pytest>=9.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.8.1",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]

[options]
packages = ['aoc', 'aoc.helpers']

[project.scripts]
aoc = "aoc.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
